# rai-manipulation-demo

./: .gitattributes  .gitignore  README.md
Project/: .gitignore  CMakeLists.txt  autoexec.cfg  imgui.ini  mesh.fbx  project.json
Project/Assets/: Environment.prefab  SceneAssets.prefab  mesh.fbx.assetinfo
Project/Examples/: panda_moveit_config_demo.launch.py  panda_moveit_config_demo.rviz
Project/Gem/: CMakeLists.txt  RAIManipulationDemo_files.cmake  RAIManipulationDemo_shared_files.cmake  gem.json  raimanipulationdemo_files.cmake  raimanipulationdemo_shared_files.cmake
Project/Passes/: ContrastAdaptiveSharpening.pass
Project/Prefabs/: PandaRobot.prefab  apple.prefab  avocado.prefab  black_cube.prefab  blue_cube.prefab  bottle.prefab  bread.prefab  broccoli.prefab  can.prefab  carrot.prefab  cheese.prefab  corn.prefab  crossaint.prefab  cube.prefab  cupcake.prefab  debug_cube.prefab  donut.prefab  foodcan.prefab  green_cube.prefab  jam.prefab  lemon.prefab  orange.prefab  pear.prefab  red_cube.prefab  sponge.prefab  tomato.prefab  toy_box.prefab  toy_cube.prefab  toy_cyllinder.prefab  toy_triangle.prefab  yogurt.prefab
Project/Registry/: autoexec.game.setreg  (+1 more)
ros2_ws/: .gitignore
ros2_ws/src/robotic_manipulation/: CMakeLists.txt  package.xml
ros2_ws/src/robotic_manipulation/include/robotic_manipulation/: arm_controller.h  rosbag_recorder.h  scenario.h  scene_controller.h  state_controller.h  vla_controller.h
ros2_ws/src/robotic_manipulation/include/robotic_manipulation/scenarios/: move_toy.h  pickup.h  put_in_box.h
ros2_ws/src/robotic_manipulation/src/: arm_controller.cpp  robotic_manipulation.cpp  rosbag_recorder.cpp  scenario.cpp  scene_controller.cpp  state_controller.cpp  vla_controller.cpp
ros2_ws/src/robotic_manipulation/src/scenarios/: move_toy.cpp  pickup.cpp  put_in_box.cpp
(+28 files in other folders)
